---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Adjust selection and colission boxes
    - mark the building as tall
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 04. 20
  Info:
    - Setup the player facing prototypes
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 04. 19
  Info:
    - Initial commit