@@ -1,0 +1,103 @@
+require("shared")
+
+function new_struct(table, struct)
+  assert(struct.id, serpent.block(struct))
+  assert(table[struct.id] == nil)
+  table[struct.id] = struct
+  return struct
+end
+
+local mod = {}
+
+script.on_init(function()
+  storage.deathrattles = {}
+
+  storage.surfacedata = {}
+  mod.refresh_surfacedata()
+end)
+
+script.on_configuration_changed(function()
+  mod.refresh_surfacedata()
+end)
+
+function mod.on_created_entity(event)
+  local entity = event.entity or event.destination
+
+  if entity.name == mod_prefix .. "riser" then
+    return entity.destroy()
+  end
+
+  local struct = new_struct(storage.surfacedata[entity.surface.index].structs, {
+    id = entity.unit_number,
+    entity = entity,
+    riser = nil,
+  })
+
+  struct.riser = entity.surface.create_entity{
+    name = mod_prefix .. "riser",
+    force = entity.force,
+    position = entity.position,
+  }
+  struct.riser.destructible = false
+  struct.riser.fluidbox.add_linked_connection(0, entity, 0)
+
+  storage.deathrattles[script.register_on_object_destroyed(entity)] = {
+    name = "pipe-pillar",
+    surface_index = entity.surface_index,
+    unit_number = entity.unit_number,
+  }
+end
+
+for _, event in ipairs({
+  defines.events.on_built_entity,
+  defines.events.on_robot_built_entity,
+  defines.events.on_space_platform_built_entity,
+  defines.events.script_raised_built,
+  defines.events.script_raised_revive,
+  defines.events.on_entity_cloned,
+}) do
+  script.on_event(event, mod.on_created_entity, {
+    {filter = "name", name = "pipe-pillar"},
+    {filter = "name", name = mod_prefix .. "riser"},
+  })
+end
+
+function mod.refresh_surfacedata()
+  -- deleted old
+  for surface_index, surfacedata in pairs(storage.surfacedata) do
+    if surfacedata.surface.valid == false then
+      storage.surfacedata[surface_index] = nil
+    end
+  end
+
+  -- created new
+  for _, surface in pairs(game.surfaces) do
+    storage.surfacedata[surface.index] = storage.surfacedata[surface.index] or {
+      surface = surface,
+      structs = {},
+    }
+  end
+end
+
+script.on_event(defines.events.on_surface_created, mod.refresh_surfacedata)
+script.on_event(defines.events.on_surface_deleted, mod.refresh_surfacedata)
+
+local deathrattles = {
+  ["pipe-pillar"] = function (deathrattle)
+    local surfacedata = storage.surfacedata[deathrattle.surface_index]
+    if surfacedata then
+      local struct = surfacedata.structs[deathrattle.unit_number]
+      if struct then surfacedata.structs[deathrattle.unit_number] = nil
+        struct.riser.destroy()
+      end
+      -- mod.mark_surface_dirty(surfacedata.surface)
+    end
+  end,
+}
+
+script.on_event(defines.events.on_object_destroyed, function(event)
+  local deathrattle = storage.deathrattles[event.registration_number]
+  if deathrattle then storage.deathrattles[event.registration_number] = nil
+    deathrattles[deathrattle.name](deathrattle)
+  end
+end)
