@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Adjust selection and colission boxes
     - mark the building as tall
+    - Add the riser ontop and control it via scripting
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 04. 20
